syntax = "proto3";
package pb;
option go_package = "mdynamodb/exp";

enum EnumExpUpdate {
    UpdateNone = 0;
    UpdateAdd = 1;
    UpdateSet = 2;
    UpdateRemove = 3;
    UpdateDelete = 4;
}

// setValueMode https://github.com/aws/aws-sdk-go-v2/blob/main/feature/dynamodb/expression/operand.go
// set value use special way
enum EnumExpUpdateSet {
    UpdateSetNone = 0;
    UpdateSetPlus = 1;
    UpdateSetMinus = 2;
    UpdateSetListAppend = 3;
    UpdateSetIfNotExists = 4;
}

message ExpUpdateSet{
    string Name = 1;
    EnumExpUpdateSet EnumExpUpdateSet = 2;
}

message ExpUpdate{
    EnumExpUpdate EnumExpUpdate = 1;
    repeated ExpUpdateSet ExpUpdateSets = 2;
}